--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- CSS do Projeto -->
     <link rel="stylesheet" href="css/styles.css" />
 
-    <script type="text/javascript" src="js/script.js" defer></script>
+    <script src="js/script.js" defer></script>
     <!-- Ion Icons -->
     <script
       src="https://unpkg.com/ionicons@5.1.2/dist/ionicons/ionicons.js"
