--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta
       name="description"
-      content="Site de Portfólio do programador Marcelo Souza"
+      content="Site de Portfólio do programador Marcelo Souza, programador fullStack, especializado em construção e manuntenção de sites, app mobile e desktop, integração com inteligências artificiais"
     />
     <meta property="og:title" content="Portfólio Marcelo Souza" />
     <meta
       property="og:description"
-      content="Site de Portfólio do programador Marcelo Souza"
+      content="Site de Portfólio do programador Marcelo Souza, programador fullStack, especializado em construção e manuntenção de sites, app mobile e desktop, integração com inteligências artificiais"
     />
     <meta property="og:url" content="https://www.marceloprogramador.com.br/" />
     <meta property="og:site_name" content="Portfólio Marcelo Souza" />
